--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -8,9 +8,8 @@ $shadow: 0px 8px 16px $grey;
 .items-container {
   background-color: $white;
   max-width: 600px;
-  height: 600px;
   margin: 20px auto;
-  padding: 40px;
+  padding: 20px;
   box-shadow: $shadow;
   border-radius: 8px;
 }
@@ -21,6 +20,8 @@ $shadow: 0px 8px 16px $grey;
   width: 100%;
   height: 100px;
   display: flex;
+  overflow: hidden;
+  margin-bottom: 20px;
 
   p {
     margin: 0;
@@ -43,6 +44,30 @@ $shadow: 0px 8px 16px $grey;
 
     .user-details {
       display: flex;
+
+      .user-image-name {
+        display: flex;
+        align-items: center;
+        margin-right: 12px;
+
+        img {
+          width: 30px;
+          height: 30px;
+          border-radius: 15px;
+          margin-right: 5px;
+        }
+      }
+
+      .user-rating {
+        display: flex;
+        align-items: center;
+
+        img {
+          width: 20px;
+          height: 20px;
+          margin-right: 5px;
+        }
+      }
     }
 
     .item-distance-views {
