--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -15,6 +15,7 @@ $shadow: 0px 8px 16px $grey;
 }
 
 .item {
+  position: relative;
   box-shadow: $shadow;
   border-radius: 8px;
   width: 100%;
@@ -29,6 +30,34 @@ $shadow: 0px 8px 16px $grey;
   img {
     width: 100px;
     object-fit: cover;
+  }
+
+  .likes {
+    position: absolute;
+    bottom: 0;
+    display: flex;
+    align-items: end;
+    padding: 6px;
+
+    p {
+      color: $white;
+      font-size: 15px;
+    }
+  }
+
+  .like-button {
+    border: none;
+    background-color: transparent;
+    padding-right: 5px;
+
+    img {
+      height: 16px;
+      width: 16px;
+    }
+
+    &:hover {
+      cursor: pointer;
+    }
   }
 
   .item-details {
